# iced_data_navigator

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/hex_showcase/: Cargo.toml
examples/hex_showcase/src/: component.rs  main.rs
src/: lib.rs
src/core/: mod.rs  scroll_area.rs  scrollbar.rs  util.rs
src/hex/: viewer.rs
